--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,11 +20,10 @@ set(sources "Main.cpp" "Sim.cpp" "Launch.cpp")
 list(TRANSFORM sources PREPEND "${EE_SRC}/")
 
 # dependencies
-add_subdirectory("${EE_DEPS}/matplotlib")
+find_package(Python3 COMPONENTS Development NumPy)
 
 # build
 add_executable(ExtendedEssay ${sources})
 
-target_include_directories(ExtendedEssay PRIVATE "${EE_DEPS}/matplotlib")
-
-target_link_libraries(ExtendedEssay MatplotlibC++)
+target_include_directories(ExtendedEssay PRIVATE ${Python3_INCLUDE_DIRS} ${Python3_NumPy_INCLUDE_DIRS} "${EE_DEPS}/matplotlib")
+target_link_libraries(ExtendedEssay Python3::Python Python3::NumPy)
